--- a/extra-addons/hospital/views/diagnosticoView.xml
+++ b/extra-addons/hospital/views/diagnosticoView.xml
@@ -1,34 +1,34 @@
 <odoo>
-    <data>
+  <data>
 
-        <!-- Vista Diagnóstico -->
-        <record id="view_hospital_diagnostico_form" model="ir.ui.view">
-            <field name="name">hospital.diagnostico.form</field>
-            <field name="model">hospital.diagnostico</field>
-            <field name="arch" type="xml">
-                <form string="Diagnóstico">
-                    <sheet>
-                        <group>
-                            <field name="nombreMedico" string="Médico"/>
-                            <field name="nombrePaciente" string="Paciente"/>
-                            <field name="diagnosticos" string="Diagnóstico"/>
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
+    <!-- Vista de formulario de Diagnósticos -->
+    <record id="view_hospital_diagnosticos_form" model="ir.ui.view">
+        <field name="name">hospital.diagnosticos.form</field>
+        <field name="model">hospital.diagnosticos</field>
+        <field name="arch" type="xml">
+            <form string="Diagnóstico">
+                <sheet>
+                    <group>
+                        <field name="medico_id" string="Médico"/>
+                        <field name="paciente_id" string="Paciente"/>
+                        <field name="diagnostico" string="Diagnóstico"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
-        <record id="view_hospital_diagnostico_list" model="ir.ui.view">
-            <field name="name">hospital.diagnostico.list</field>
-            <field name="model">hospital.diagnostico</field>
-            <field name="arch" type="xml">
-                <list>
-                    <field name="nombreMedico" string="Médico"/>
-                    <field name="nombrePaciente" string="Paciente"/>
-                    <field name="diagnosticos" string="Diagnóstico"/>
-                </list>
-            </field>
-        </record>
+    <record id="view_hospital_diagnosticos_list" model="ir.ui.view">
+        <field name="name">hospital.diagnosticos.list</field>
+        <field name="model">hospital.diagnosticos</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="medico_id" string="Médico"/>
+                <field name="paciente_id" string="Paciente"/>
+                <field name="diagnostico" string="Diagnóstico"/>
+            </list>
+        </field>
+    </record>
 
-    </data>
+  </data>
 </odoo>
